2012-11-23 László Németh <nemeth@numbertext.org>:
        - fix strange false positives resulted by a synchronization problem (missing
          alternatives with unloaded dictionary), the problem reported by Olivier Ronez

2012-09-18 László Németh <nemeth@numbertext.org>:
        - fix suggest() splitting

2012-08-24 László Németh <nemeth@numbertext.org>:
        - fix URL splitting
        - update URLs in English rules

2012-08-23 László Németh <nemeth@numbertext.org>:
        - fix fdo#46542 ("an usability" instead of "a usability") reported by Roman Eisele
        - fix fdo#46549 (allow "an habitual", too), reported by jacobwwood at fdo
        - fixes for English and Hungarian modules

2009-08-21  Yakov Reztsov <yr at myooo dot ru>
	* src/ru_RU/*: fixes and new Russian grammar rules

2012-07-09  László Németh <nemeth@numbertext.org>:
        - fix positions of underlining of part of the matched pattern:
          (foo) (bar) -2> baz # Did you mean?
        - "|" as alternative separator of suggestions
          foo -> bar|baz # Did you mean?
        - print depends from PYUNO_DEBUG_LEVEL (fix for Windows)
        - print() for future Python 3 support

2012-05-27  Olivier Ronez <dicollecte.org>:
        - fix: suggestion with capital is based on selected back reference group

2012-02-15  Olivier Ronez <dicollecte.org>:
        - new: error positioning, underline a back reference group instead of the full pattern

2012-02-12  Olivier Ronez <dicollecte.org>:
        - back references in explanations, eg. # \1 should be...
        - display message without suggestion, eg.  foo -> _ # Message
        - function word() returns '' instead of None
        - add .gitignore

2012-02-04  László Németh <nemeth@numbertext.org>:
        - fix multiple suggestions, the problem reported by Yakov Reztsov 

2012-02-02  László Németh <nemeth@numbertext.org>:
        - Lightproof editor (rule development extension for LibreOffice)