@@ -3,7 +3,7 @@ lang = en
 locales = en_GB en_US en_PH en_ZA en_NA en_ZW en_AU en_CA en_IE en_IN en_BZ en_BS en_GH en_JM en_NZ en_TT
 name = Lightproof grammar checker (English)
 version = 0.4.3
-author = László Németh
+author = Laszlo Nemeth
 provider = LibreOffice
 implname = lightproof_en
 link = http://www.libreoffice.org
