@@ -58,17 +58,17 @@ etc [-–'’\w]*
 
 {a}n{_}{vow}{etc} <- {vow} in aA or {vow}.lower() in aA -> {a}{_}{vow}{etc} # Did you mean: \n http://en.wikipedia.org/wiki/English_articles#Distinction_between_a_and_an
 
-a{_}{vow}{etc} <- ({vow} <> {vow}.upper()) and not ({vow} in aA or
+a{_}{vow}{etc} <- ({vow} != {vow}.upper()) and not ({vow} in aA or
 	{vow}.lower() in aA) and spell({vow}) -> an{_}{vow}{etc} # Bad article? \n http://en.wikipedia.org/wiki/English_articles#Distinction_between_a_and_an
 
 a{_}{con}{etc} <- {con} in aAN or {con}.lower() in aAN -> an{_}{con}{etc} # Did you mean: \n http://en.wikipedia.org/wiki/English_articles#Distinction_between_a_and_an
 
-{a}n{_}{con}{etc} <- ({con} <> {con}.upper()) and not ({con} in aA or
+{a}n{_}{con}{etc} <- ({con} != {con}.upper()) and not ({con} in aA or
 	{con}.lower() in aAN) and not {con} in aB and spell({con}) -> {a}{_}{con}{etc} # Bad article? \n http://en.wikipedia.org/wiki/English_articles#Distinction_between_a_and_an
 
 # rules for sentences beginning with "A"
 
-^A{_}{vow}{etc} <- ({vow} <> {vow}.upper()) and not ({vow} in aA or
+^A{_}{vow}{etc} <- ({vow} != {vow}.upper()) and not ({vow} in aA or
 	{vow}.lower() in aA) and spell({vow}) -> An{_}{vow}{etc} # Bad article? \n http://en.wikipedia.org/wiki/English_articles#Distinction_between_a_and_an
 
 ^A{_}{con}{etc} <- {con} in aAN or {con}.lower() in aAN -> An{_}{con}{etc} # Did you mean: \n http://en.wikipedia.org/wiki/English_articles#Distinction_between_a_and_an
@@ -379,5 +379,5 @@ def measurement(mnum, min, mout, mstr, decimal, remove):
     m = calc("CONVERT_ADD", (float(eval(mnum.replace(remove, "").replace(decimal, ".").replace(u"−", "-"))), min, mout))
     a = list(set([str(calc("ROUND", (m, 0)))[:-2], str(calc("ROUND", (m, 1))), str(calc("ROUND", (m, 2))), str(m)])) # remove duplicated rounded items
     a.sort(lambda x, y: len(x) - len(y)) # sort by string length
-    return join(a, mstr + "\n").replace(".", decimal).replace("-", u"−") + mstr
+    return (mstr + "\n").join(a).replace(".", decimal).replace("-", u"−") + mstr
 
