@@ -3,7 +3,7 @@ lang = hu_HU
 locales = hu_HU
 name = Lightproof grammar checker (magyar)
 version = 1.4.4
-author = László Németh
+author = Laszlo Nemeth
 provider = FSF.hu
 implname = lightproof_hu
 link = http://www.fsf.hu
