@@ -1,3 +1,6 @@
+2012-12-04 László Németh <nemeth@numbertext.org>:
+- Python 3.3 támogatás
+
 2012-08-23  László Németh <nemeth@numbertext.org>:
 - „a 1,5” („a másfél”) nem névelőhasználati hiba. Pénzes Dávid hívta fel a
   figyelmet a problémára.
