@@ -1,3 +1,6 @@
+2012-12-04 László Németh <nemeth@numbertext.org>:
+        - Python 3.3 port
+
 2012-11-23 László Németh <nemeth@numbertext.org>:
         - fix strange false positives resulted by a synchronization problem (missing
           alternatives with unloaded dictionary), the problem reported by Olivier Ronez
